Fixed Railcraft configs

--- a/config/railcraft/ores/mine_nickel.cfg
+++ b/config/railcraft/ores/mine_nickel.cfg
@@ -49,18 +49,18 @@ ore {
     ##########################################################################################################
 
     dimensions {
-        # Dimension IDs to disallow generation in. [default: [Ljava.lang.String;@6e71082c]
+        # Dimension IDs to disallow generation in. [default: [Ljava.lang.String;@4ce63f0a]
         S:dimensionBlacklist <
             -1
             1
          >
 
-        # Dimension IDs to allow generation in. Overrides blacklists. [default: [Ljava.lang.String;@d59650e]
+        # Dimension IDs to allow generation in. Overrides blacklists. [default: [Ljava.lang.String;@1ffe0b9b]
         S:dimensionWhitelist <
             0
          >
 
-        # World Provider classes to disallow generation in. [default: [Ljava.lang.String;@6a7302e5]
+        # World Provider classes to disallow generation in. [default: [Ljava.lang.String;@1b2b228]
         S:worldProvidersBlacklist <
             net.minecraft.world.WorldProviderHell
             net.minecraft.world.WorldProviderEnd
@@ -77,11 +77,11 @@ ore {
     ##########################################################################################################
 
     biomes {
-        # Biome registry names where the ore will will not generate. Takes priority over the whitelist and types. [default: [Ljava.lang.String;@6234372e]
+        # Biome registry names where the ore will will not generate. Takes priority over the whitelist and types. [default: [Ljava.lang.String;@2c99eab2]
         S:blacklist <
          >
 
-        # Biome registry names where the ore will generate. Takes priority over types. [default: [Ljava.lang.String;@102275a7]
+        # Biome registry names where the ore will generate. Takes priority over types. [default: [Ljava.lang.String;@38ae3efb]
         S:whitelist <
          >
     }
@@ -94,11 +94,11 @@ ore {
     ##########################################################################################################
 
     biomestypes {
-        # Biome Dictionary types where the ore will will not generate. Takes priority over the whitelist. [default: [Ljava.lang.String;@76f42fe7]
+        # Biome Dictionary types where the ore will will not generate. Takes priority over the whitelist. [default: [Ljava.lang.String;@45cd488b]
         S:blacklist <
          >
 
-        # Biome Dictionary types where the ore will generate. [default: [Ljava.lang.String;@30435522]
+        # Biome Dictionary types where the ore will generate. [default: [Ljava.lang.String;@2a80317a]
         S:whitelist <
             ALL
          >
@@ -111,14 +111,14 @@ ore {
     ##########################################################################################################
 
     rich {
-        # Biome Dictionary types where the ore will generator more richly. You can use 'ALL' to specify all types. [default: [Ljava.lang.String;@708145c8]
+        # Biome Dictionary types where the ore will generator more richly. You can use 'ALL' to specify all types. [default: [Ljava.lang.String;@bf24ca]
         S:biomeTypes <
             MOUNTAIN
             MESA
             HILLS
          >
 
-        # Biomes where the ore will generator more richly. Expects fully qualified Biome registry names. '<modid>:all' can be used to specify all Biomes from a specific mod. [default: [Ljava.lang.String;@730d9943]
+        # Biomes where the ore will generator more richly. Expects fully qualified Biome registry names. '<modid>:all' can be used to specify all Biomes from a specific mod. [default: [Ljava.lang.String;@49af92e2]
         S:biomes <
             minecraft:mesa
          >
