--- a/config/randomtweaks/randomtweaks.cfg
+++ b/config/randomtweaks/randomtweaks.cfg
@@ -436,7 +436,7 @@ misc {
 
     # Changes the names of the stone and wooden buttons so that their type is in them.
     # Default: false
-    B:betterButtonNames=false
+    B:betterButtonNames=true
 
     # Sets when death punishments are enabled in which all XP and 3 hunger points are removed. This is always disabled in creative mode and overrides hunger.respawnResetBehavior.
     # Valid values:
