Quark's Spelotheums are half as common

--- a/config/randomtweaks/randomtweaks.cfg
+++ b/config/randomtweaks/randomtweaks.cfg
@@ -8,7 +8,7 @@
 
 animals {
     # The chance that a bat drops a piece of Leather when killed.
-    # Default: 0.8
+    # Default: 0.0
     D:batLeatherDropChance=0.0
 
     # Whether colored sheep should spawn.
@@ -127,7 +127,7 @@ client {
     B:contributorCapes=true
 
     # Disables the Ender Dragon death sound.
-    # Default: false
+    # Default: true
     B:disableEnderDragonDeathSound=true
 
     # Whether to disable the potion icons at the top right.
@@ -139,7 +139,7 @@ client {
     B:disablePotionShift=true
 
     # Disables the Wither spawn sound.
-    # Default: false
+    # Default: true
     B:disableWitherSpawnSound=true
 
     # Whether to start the game on the Multiplayer screen.
@@ -435,7 +435,7 @@ misc {
     D:attackSpeed=4.0
 
     # Changes the names of the stone and wooden buttons so that their type is in them.
-    # Default: false
+    # Default: true
     B:betterButtonNames=true
 
     # Sets when death punishments are enabled in which all XP and 3 hunger points are removed. This is always disabled in creative mode and overrides hunger.respawnResetBehavior.
@@ -443,7 +443,7 @@ misc {
     # ENABLED
     # ENABLED_IF_KEEP_INVENTORY
     # DISABLED
-    # Default: ENABLED_IF_KEEP_INVENTORY
+    # Default: DISABLED
     S:deathPunishmentMode=DISABLED
 
     # Disables the cumulative anvil cost.
@@ -463,7 +463,7 @@ misc {
     # VANILLA
     # DONT_TRAMPLE_IF_FEATHER_FALLING
     # DONT_TRAMPLE
-    # Default: DONT_TRAMPLE_IF_FEATHER_FALLING
+    # Default: DONT_TRAMPLE
     S:farmlandTrampleBehavior=DONT_TRAMPLE
 
     # Enables Roman numerals from -32768 to 32767.
