Disabled Railcraft's coal coke

--- a/config/railcraft/items.cfg
+++ b/config/railcraft/items.cfg
@@ -43,7 +43,7 @@ items {
     B:firestone_refined=true
     B:fluid_bottle_creosote=true
     B:fluid_bottle_steam=true
-    B:fuel_coke=true
+    B:fuel_coke=false
     B:gear=true
     B:ic2_upgrade_lapotron=true
     B:ingot=false
