--- a/config/botaniatweaks.cfg
+++ b/config/botaniatweaks.cfg
@@ -1,11 +1,8 @@
 # Configuration file
 
-~CONFIG_VERSION: 3
+~CONFIG_VERSION: 5
 
 balance {
-    # Should the flint-to-powder alchemy recipe be the same price as the powder-to-flint? This makes it possible to run an Entropinnyum off a cobbleworks.
-    B:cheapFlintToPowder=true
-
     # How does the Orechid determine its cost and speed to run?
     # "default": The Orechid will be cheap if Garden of Glass is loaded.
     # "force_gog": The Orechid will always be cheap to run, even if Garden of Glass is not present.
@@ -17,9 +14,6 @@ balance {
 
     # A multiplier for the amount of mana that the Rosa Arcana produces when soaking up XP orbs from the world. This doesn't affect the amount of mana obtained from the XP bars of nearby players; only in-world orb entities are affected. [range: 1.0 ~ 8.0, default: 1.0]
     S:roseArcanaOrbMultiplier=1.0
-
-    # Should the Spectrolus generate 8x the mana it does by default? This makes it much cheaper to run; filling a mana pool only requires a little over five stacks of wool, not over a double chest's worth. [default: false]
-    B:superSpectrolus=true
 
     tnt {
         # Should the Entropinnyum block TNT that came from a vanilla-style TNT duplicator device? [default: false]
@@ -109,6 +103,10 @@ etc {
     # If true, placing a corporea-related block will automatically decorate it with corporea sparks and floral powder, unless you're sneaking. [default: false]
     B:autoCorporeaSpark=false
 
+    # If "true", the custom terrestrial agglomeration plate will try to "collect" the items on top of it, resolving issues relating to "2x apple" being treated differently from "apple, apple". This operation can be expensive, so here is your option to disable it, if you have a lot of agglomeration recipes that don't use this feature.
+    # This is kind of a hack fix; if I get around to writing a more performant agglomeration recipe matcher, I'll remove this option. [default: true]
+    B:doCustomAggglomerationPreprocessing=true
+
     # Can dispensers shoot glass bottles to turn them in to Ender Air in the End dimension? This allows for automation of Ender Air, which was not previously possible. [default: false]
     B:enderAirDispenser=true
 
@@ -118,17 +116,14 @@ etc {
     # Should Botania Tweaks keep statistics on the total amount of mana generated, across all flowers and dimensions? [default: false]
     B:keepManaGenerationStatistics=true
 
-    # Should the Runic Altar and Petal Apothecary pay more attention to the NBT tags on particular items? By default, they only compare item ID and data values. If "true", the NBT tag on the user-input stack must be a superset of the NBT tag supplied in the recipe. [default: false]
-    B:nbtAwareAltarAndApothecary=false
-
     # Should the water bowl mechanic, where you right click on water with a bowl to create a filled bowl, be available outside of Garden of Glass mode? [default: false]
     B:nonGogWaterBowl=false
 
     # Can sheep eat the custom Botania grass blocks to regrow their wool? [default: false]
     B:sheepEatCustomGrass=true
 
-    # If true, any item is allowed to enter the Petal Apothecary, not just petals, runes, and manaresources. Great for modpacks. [default: false]
-    B:unlockApothecary=true
+    # Can players till the custom Botania grass blocks into farmland? [default: false]
+    B:tillCustomGrass=false
 }
 
 
