--- a/config/buildcraft/main.cfg
+++ b/config/buildcraft/main.cfg
@@ -88,6 +88,9 @@ modules {
 performance {
     # Disable this if you get sub-standard framerates due to buildcraft's ~60 sprites animating every frame.
     B:enableAnimatedSprites=true
+
+    # The maximum number of search results to display in the guide book.
+    I:maxGuideSearchResults=1200
 }
 
 
@@ -95,129 +98,148 @@ worldgen {
     # Should BuildCraft generate anything in the world?
     B:enable=true
 
-    # Should any oil sprouts or lakes be generated at all?
-    B:enableOilGen=true
-
-    # Whether oil spouts are generated or not. The oil spring at the bottom of large lakes will still exist.
-    B:enableOilSpouts=true
-
-    # Biome registry names (e.g. 'minecraft:ocean','minecraft:plains') of biomes that should have GREATLY increased oil generation rates.
-    S:excessiveBiomes <
-        buildcraftenergy:oil_desert
-        buildcraftenergy:oil_ocean
-     >
-
-    # Biome registry names (e.g. 'minecraft:hell','minecraft:jungle') of biomes that should never generate oil.
-    S:excludedBiomes <
-        minecraft:ocean
-        minecraft:plains
-        minecraft:desert
-        minecraft:extreme_hills
-        minecraft:forest
-        minecraft:taiga
-        minecraft:swampland
-        minecraft:river
-        minecraft:hell
-        minecraft:sky
-        minecraft:frozen_ocean
-        minecraft:frozen_river
-        minecraft:ice_flats
-        minecraft:ice_mountains
-        minecraft:mushroom_island
-        minecraft:mushroom_island_shore
-        minecraft:beaches
-        minecraft:desert_hills
-        minecraft:forest_hills
-        minecraft:taiga_hills
-        minecraft:smaller_extreme_hills
-        minecraft:jungle
-        minecraft:jungle_hills
-        minecraft:jungle_edge
-        minecraft:deep_ocean
-        minecraft:stone_beach
-        minecraft:cold_beach
-        minecraft:birch_forest
-        minecraft:birch_forest_hills
-        minecraft:roofed_forest
-        minecraft:taiga_cold
-        minecraft:taiga_cold_hills
-        minecraft:redwood_taiga
-        minecraft:redwood_taiga_hills
-        minecraft:extreme_hills_with_trees
-        minecraft:savanna
-        minecraft:savanna_rock
-        minecraft:mesa
-        minecraft:mesa_rock
-        minecraft:mesa_clear_rock
-        randomthings:spectral
-        appliedenergistics2:storage_biome
-        integrateddynamics:biome_meneglin
-        nuclearcraft:nuclear_wasteland
-        rockhounding_surface:white_sands
-        traverse:autumnal_woods
-        traverse:woodlands
-        traverse:mini_jungle
-        traverse:meadow
-        traverse:green_swamp
-        traverse:red_desert
-        traverse:temperate_rainforest
-        traverse:badlands
-        traverse:mountainous_desert
-        traverse:rocky_plateau
-        traverse:forested_hills
-        traverse:birch_forested_hills
-        traverse:autumnal_wooded_hills
-        traverse:cliffs
-        traverse:glacier
-        traverse:glacier_spikes
-        traverse:snowy_coniferous_forest
-        traverse:lush_hills
-        traverse:canyon
-        traverse:crag_cliffs
-        traverse:desert_shrubland
-        traverse:thicket
-        traverse:arid_highland
-        minecraft:void
-        minecraft:mutated_plains
-        minecraft:mutated_desert
-        minecraft:mutated_extreme_hills
-        minecraft:mutated_forest
-        minecraft:mutated_taiga
-        minecraft:mutated_swampland
-        minecraft:mutated_ice_flats
-        minecraft:mutated_jungle
-        minecraft:mutated_jungle_edge
-        minecraft:mutated_birch_forest
-        minecraft:mutated_birch_forest_hills
-        minecraft:mutated_roofed_forest
-        minecraft:mutated_taiga_cold
-        minecraft:mutated_redwood_taiga
-        minecraft:mutated_redwood_taiga_hills
-        minecraft:mutated_extreme_hills_with_trees
-        minecraft:mutated_savanna
-        minecraft:mutated_savanna_rock
-        minecraft:mutated_mesa
-        minecraft:mutated_mesa_rock
-        minecraft:mutated_mesa_clear_rock
-        aether_legacy:aether_highlands
-     >
-
-    # Dimension ID's (e.g. '-1' for the nether,'1' for the end) of dimensions that should never generate oil.
-    I:excludedDimensions <
-        -1
-        1
-        43
-     >
-
     # Should BuildCraft generate water springs?
     B:generateWaterSprings=true
 
-    # The rate of occurrence of oil wells.
-    D:oilWellGenerationRate=1.0
+    oil {
+        # Can oil blocks burn?
+        B:can_burn=true
+        B:enable=true
+        S:excessiveBiomes <
+            buildcraftenergy:oil_desert
+            buildcraftenergy:oil_ocean
+         >
+        S:excludedBiomes <
+            minecraft:ocean
+            minecraft:plains
+            minecraft:desert
+            minecraft:extreme_hills
+            minecraft:forest
+            minecraft:taiga
+            minecraft:swampland
+            minecraft:river
+            minecraft:hell
+            minecraft:sky
+            minecraft:frozen_ocean
+            minecraft:frozen_river
+            minecraft:ice_flats
+            minecraft:ice_mountains
+            minecraft:mushroom_island
+            minecraft:mushroom_island_shore
+            minecraft:beaches
+            minecraft:desert_hills
+            minecraft:forest_hills
+            minecraft:taiga_hills
+            minecraft:smaller_extreme_hills
+            minecraft:jungle
+            minecraft:jungle_hills
+            minecraft:jungle_edge
+            minecraft:deep_ocean
+            minecraft:stone_beach
+            minecraft:cold_beach
+            minecraft:birch_forest
+            minecraft:birch_forest_hills
+            minecraft:roofed_forest
+            minecraft:taiga_cold
+            minecraft:taiga_cold_hills
+            minecraft:redwood_taiga
+            minecraft:redwood_taiga_hills
+            minecraft:extreme_hills_with_trees
+            minecraft:savanna
+            minecraft:savanna_rock
+            minecraft:mesa
+            minecraft:mesa_rock
+            minecraft:mesa_clear_rock
+            randomthings:spectral
+            appliedenergistics2:storage_biome
+            integrateddynamics:biome_meneglin
+            nuclearcraft:nuclear_wasteland
+            rockhounding_surface:white_sands
+            traverse:autumnal_woods
+            traverse:woodlands
+            traverse:mini_jungle
+            traverse:meadow
+            traverse:green_swamp
+            traverse:red_desert
+            traverse:temperate_rainforest
+            traverse:badlands
+            traverse:mountainous_desert
+            traverse:rocky_plateau
+            traverse:forested_hills
+            traverse:birch_forested_hills
+            traverse:autumnal_wooded_hills
+            traverse:cliffs
+            traverse:glacier
+            traverse:glacier_spikes
+            traverse:snowy_coniferous_forest
+            traverse:lush_hills
+            traverse:canyon
+            traverse:crag_cliffs
+            traverse:desert_shrubland
+            traverse:thicket
+            traverse:arid_highland
+            minecraft:void
+            minecraft:mutated_plains
+            minecraft:mutated_desert
+            minecraft:mutated_extreme_hills
+            minecraft:mutated_forest
+            minecraft:mutated_taiga
+            minecraft:mutated_swampland
+            minecraft:mutated_ice_flats
+            minecraft:mutated_jungle
+            minecraft:mutated_jungle_edge
+            minecraft:mutated_birch_forest
+            minecraft:mutated_birch_forest_hills
+            minecraft:mutated_roofed_forest
+            minecraft:mutated_taiga_cold
+            minecraft:mutated_redwood_taiga
+            minecraft:mutated_redwood_taiga_hills
+            minecraft:mutated_extreme_hills_with_trees
+            minecraft:mutated_savanna
+            minecraft:mutated_savanna_rock
+            minecraft:mutated_mesa
+            minecraft:mutated_mesa_rock
+            minecraft:mutated_mesa_clear_rock
+            aether_legacy:aether_highlands
+         >
+        I:excludedDimensions <
+            -1
+            1
+            43
+         >
+        D:generationRate=1.0
+        S:surfaceDepositBiomes <
+         >
 
-    # Biome registry names (e.g. 'minecraft:ocean','minecraft:hills') of biomes that should have slightly increased oil generation rates.
-    S:surfaceDepositBiomes <
-     >
+        spawn_probability {
+            # The percentage probability of a large oil spawn
+            D:large=0.04
+
+            # The percentage probability of a medium oil spawn
+            D:medium=0.1
+
+            # The percentage probability of a small oil spawn
+            D:small=2.0
+        }
+
+        spouts {
+            B:enable=true
+
+            # The maximum height for large oil spouts
+            I:large_max_height=20
+
+            # The minimum height for large oil spouts
+            I:large_min_height=10
+
+            # The maximum height for small oil spouts
+            I:small_max_height=12
+
+            # The minimum height for small oil spouts
+            I:small_min_height=6
+        }
+
+    }
+
 }
 
 
