--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -521,6 +521,7 @@ crafting {
     B:therealfarfetchd.rswires.common.block.LampInv=true
     B:valkyrienwarfare.addon.control.block.BlockDopedEtherium=true
     B:valkyrienwarfare.addon.world.block.BlockEtheriumOre=true
+    B:vazkii.botania.common.block.BlockBifrostPerm=true
     B:vazkii.botania.common.block.BlockDreamwood=true
     B:vazkii.botania.common.block.BlockFelPumpkin=true
     B:vazkii.botania.common.block.BlockLivingrock=true
@@ -530,6 +531,8 @@ crafting {
     B:vazkii.botania.common.block.BlockStorage=true
     B:vazkii.botania.common.block.decor.BlockBlaze=true
     B:vazkii.botania.common.block.decor.BlockCustomBrick=true
+    B:vazkii.botania.common.block.decor.BlockElfGlass=true
+    B:vazkii.botania.common.block.decor.BlockManaGlass=true
     B:vazkii.botania.common.block.decor.BlockPavement=true
     B:vazkii.botania.common.block.decor.BlockPetalBlock=true
     B:vazkii.botania.common.block.decor.BlockShimmerrock=true
