--- a/config/immersiverailroading.cfg
+++ b/config/immersiverailroading.cfg
@@ -26,6 +26,9 @@ general {
 
         # Requires solid blocks to be placed under the rails
         B:requireSolidBlocks=true
+
+        # Trains get destroyed by Mob explosions
+        B:trainMobExplosionDamage=true
     }
 
     balance {
@@ -111,11 +114,14 @@ general {
             I:biofuel=170
             I:diesel=200
             I:ethanol=170
+            I:fuel=180
             I:fuel_dense=110
             I:fuel_light=150
             I:fuel_mixed_heavy=130
             I:fuel_mixed_light=100
             I:gasoline=100
+            I:kerosene=180
+            I:lpg=150
             I:oil=100
             I:oil_dense=110
             I:oil_distilled=50
@@ -148,6 +154,9 @@ general {
 
         # Time between open computers poll ticks for augments
         I:ocPollDelayTicks=1
+
+        # Old Narrow track placement (single width instead of 3)
+        B:oldNarrowWidth=false
 
         # Speed up IR stock server tick stepping to compensate for tps lag
         B:serverTickCompensation=true
