--- a/config/pneumaticcraft/thirdparty.cfg
+++ b/config/pneumaticcraft/thirdparty.cfg
@@ -12,6 +12,7 @@
     "thaumcraft": true,
     "mcmultipart": true,
     "enderio": true,
+    "immersivepetroleum": true,
     "igwmod": true,
     "ic2": true,
     "opencomputers": true,
