--- a/config/refraction.cfg
+++ b/config/refraction.cfg
@@ -13,6 +13,12 @@ balancing {
     # Max: 1
     I:extra_fail_chance_green=1
 
+    # When a red laser would trigger item smelting, this setting adds a 1 in X chance for it to succeed
+    # Min: 1
+    # Default: 1
+    # Max: 1
+    I:extra_fail_chance_item_smelting=100
+
     # When a pink laser would normally trigger, this setting adds a 1 in X chance for it to still fail (1 = disabled
     # Min: 1
     # Default: 1
