--- a/config/theoneprobe.cfg
+++ b/config/theoneprobe.cfg
@@ -97,15 +97,15 @@ client {
 ##########################################################################################################
 
 providers {
-    # Entity providers that should be excluded [default: ]
+    # Entity providers that should be excluded [default: [Ljava.lang.String;@4efec43b]
     S:excludedEntityProviders <
      >
 
-    # Providers that should be excluded [default: ]
+    # Providers that should be excluded [default: [Ljava.lang.String;@71ae2736]
     S:excludedProviders <
      >
 
-    # Order in which entity providers should be used [default: [theoneprobe:entity.default], [theoneprobe:entity.debug], [theoneprobe:entity.entity], [danknull:default], [pneumaticcraft:entity], [topaddons:base], [topaddons:binnie's mods], [topaddons:forestry], [topaddons:opencomputers], [topaddons:stevescarts], [topaddons:storagedrawers], [topaddons:tconstruct], [topaddons:vanilla], [topaddons:rustic]]
+    # Order in which entity providers should be used [default: [Ljava.lang.String;@5dec6713]
     S:sortedEntityProviders <
         theoneprobe:entity.default
         theoneprobe:entity.debug
@@ -114,7 +114,7 @@ providers {
         pneumaticcraft:entity
      >
 
-    # Order in which providers should be used [default: [theoneprobe:default], [theoneprobe:debug], [theoneprobe:block], [tconstruct:casting], [tconstruct:progress], [immersiveengineering:EnergyInfo], [immersiveengineering:ProcessInfo], [immersiveengineering:TeslaCoilInfo], [immersiveengineering:SideConfigInfo], [immersiveengineering:FluidInfo], [appliedenergistics2:TileInfoProvider], [appliedenergistics2:PartInfoProvider], [buildcraftcompat.top], [danknull:default], [mcjtylib:default], [integrateddynamics:partData], [integrateddynamics:proxyData], [integrateddynamics:dryingBasinData], [integrateddynamics:squeezerData], [pneumaticcraft:default], [rockhounding_surface:incubator], [topaddons:base], [topaddons:binnie's mods], [topaddons:forestry], [topaddons:opencomputers], [topaddons:stevescarts], [topaddons:storagedrawers], [topaddons:tconstruct], [topaddons:vanilla], [topaddons:rustic], [modtut:default], [mekanism], [omlib:default], [shetiphian.core], [waystones]]
+    # Order in which providers should be used [default: [Ljava.lang.String;@145c4db]
     S:sortedProviders <
         theoneprobe:default
         theoneprobe:debug
@@ -157,11 +157,11 @@ theoneprobe {
     # If true equal stacks will be compacted in the chest contents overlay [default: true]
     B:compactEqualStacks=true
 
-    # A list of blocks for which we don't send NBT over the network. This is mostly useful for blocks that have HUGE NBT in their pickblock (itemstack) [default: ]
+    # A list of blocks for which we don't send NBT over the network. This is mostly useful for blocks that have HUGE NBT in their pickblock (itemstack) [default: [Ljava.lang.String;@2e9e8395]
     S:dontSendNBT <
      >
 
-    # A list of blocks for which we don't show chest contents automatically except if sneaking [default: ]
+    # A list of blocks for which we don't show chest contents automatically except if sneaking [default: [Ljava.lang.String;@47f2e7f3]
     S:dontShowContentsUnlessSneaking <
      >
 
@@ -170,6 +170,9 @@ theoneprobe {
 
     # How much time (ms) to wait before reporting an exception again [range: 1 ~ 10000000, default: 20000]
     I:loggingThrowableTimeout=20000
+
+    # The maximum packet size to send an itemstack from client to server. Reduce this if you have issues with network lag caused by TOP [range: -1 ~ 32768, default: 20000]
+    I:maxPacketToServer=20000
 
     # Is the probe needed to show the tooltip? 0 = no, 1 = yes, 2 = yes and clients cannot override, 3 = probe needed for extended info only [range: 0 ~ 3, default: 3]
     I:needsProbe=0
@@ -207,7 +210,7 @@ theoneprobe {
     # If true show the color of the collar of a wolf [default: true]
     B:showCollarColor=true
 
-    # A list of blocks for which we automatically show chest contents even if not sneaking [default: [storagedrawers:basicDrawers], [storagedrawersextra:extra_drawers]]
+    # A list of blocks for which we automatically show chest contents even if not sneaking [default: [Ljava.lang.String;@6490d224]
     S:showContentsWithoutSneaking <
         storagedrawers:basicDrawers
         storagedrawersextra:extra_drawers
