--- a/config/unidict/UniDict.cfg
+++ b/config/unidict/UniDict.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 1.12.2-2.9.1
+~CONFIG_VERSION: 1.12.2-2.9.2
 
 dump {
     # Enable this to keep track of all the entries.
@@ -25,18 +25,18 @@ general {
     B:autoHideInJEI=true
 
     # put here entries that you don't want to hide in JEI.
-    # only works if keepOneEntry is false. [default: ]
+    # only works if keepOneEntry is false. [default: [Ljava.lang.String;@af11620]
     S:autoHideInJEIEntryBlackList <
      >
 
     # put here kinds that you don't want to hide in JEI.
-    # only works if keepOneEntry is false. [default: [ore]]
+    # only works if keepOneEntry is false. [default: [Ljava.lang.String;@7fab8f6a]
     S:autoHideInJEIKindBlackList <
         ore
      >
 
     # Put here itemstacks that you want don't want to ignore/not unify.
-    # Example Format: minecraft:iron_ingot#0 [default: ]
+    # Example Format: minecraft:iron_ingot#0 [default: [Ljava.lang.String;@78666e75]
     S:itemStacksNamesToIgnore <
      >
 
@@ -48,17 +48,17 @@ general {
     B:keepOneEntryBlackListsAsWhiteLists=false
 
     # entries listed here will be blacklisted in keepOneEntry.
-    # must be the exact entry name. [default: ]
+    # must be the exact entry name. [default: [Ljava.lang.String;@38b9fbd8]
     S:keepOneEntryEntryBlackList <
      >
 
     # kinds listed here will be blacklisted in keepOneEntry.
-    # must be the exact kind name. [default: ]
+    # must be the exact kind name. [default: [Ljava.lang.String;@49678906]
     S:keepOneEntryKindBlackList <
      >
 
     # mods listed here will be blacklisted in keepOneEntry.
-    # must be the exact modID. [default: ]
+    # must be the exact modID. [default: [Ljava.lang.String;@5b2b9c37]
     S:keepOneEntryModBlackList <
      >
 
@@ -78,7 +78,7 @@ general {
     # 
     # Format to Remove entries from the OreDictionary:
     # weirdStone-minecraft:stone#1
-    # The example above will remove Granite from weirdStone. [default: ]
+    # The example above will remove Granite from weirdStone. [default: [Ljava.lang.String;@5827256e]
     S:userOreDictEntries <
      >
 }
@@ -109,7 +109,7 @@ modules {
 
 resources {
     # what kind of child do you want to make a standard?
-    #  [default: [ore], [dustTiny], [dustSmall], [chunk], [dust], [nugget], [ingot], [block], [plate], [gear], [rod]]
+    #  [default: [Ljava.lang.String;@15cc9ef0]
     S:childrenOfMetals <
         ore
         dustTiny
@@ -125,7 +125,7 @@ resources {
      >
 
     # Here you can put a list to custom unify them.
-    # must be in this format "ResourceName:kind1|kind2|...". [default: [Obsidian:dustTiny|dust], [Stone:dust], [Obsidian:dust|dustSmall], [Coal:dust|dustSmall], [Sulfur:dust|dustSmall], [Salt:dust]]
+    # must be in this format "ResourceName:kind1|kind2|...". [default: [Ljava.lang.String;@3cf4fb8c]
     S:customUnifiedResources <
         Obsidian:dustTiny|dust
         Stone:dust
@@ -149,20 +149,20 @@ resources {
 
     # Add here input ItemStack's (item registry names) that you don't want the Furnace Integration to mess with.
     # Format:
-    # minecraft:iron_ingot#0 [default: []]
+    # minecraft:iron_ingot#0 [default: [Ljava.lang.String;@2a8dcead]
     S:furnaceInputsToIgnore <
         
      >
 
     # Add here output ItemStack's (item registry names) that you don't want the Furnace Integration to mess with.
     # Format:
-    # minecraft:iron_ingot#0 [default: []]
+    # minecraft:iron_ingot#0 [default: [Ljava.lang.String;@5b47fe12]
     S:furnaceOutputsToIgnore <
         
      >
 
     # Crafting Integration will ignore recipes created by the ModId's listed below.
-    #  [default: [oreshrubs]]
+    #  [default: [Ljava.lang.String;@78c8ba9e]
     S:ignoreModIdRecipes <
         oreshrubs
      >
@@ -170,7 +170,7 @@ resources {
     # List of Metals to unify.
     # Note 1: this will only work for "metals"
     # Note 2: if your "metal" doesn't have an ingot form, check the "S:customUnifiedResources" config option.
-    #  [default: [Iron], [Gold], [Copper], [Tin], [Silver], [Lead], [Nickel], [Platinum], [Zinc], [Aluminium], [Aluminum], [Alumina], [Chromium], [Chrome], [Uranium], [Iridium], [Osmium], [Bronze], [Steel], [Brass], [Invar], [Electrum], [Cupronickel], [Constantan]]
+    #  [default: [Ljava.lang.String;@363f8782]
     S:metalsToUnify <
         Iron
         Gold
@@ -200,7 +200,7 @@ resources {
 
     # all the entries will be sorted according to the modID list below
     # must be the exact modID.
-    #  [default: [minecraft], [thermalfoundation], [substratum], [ic2], [mekanism], [immersiveengineering], [techreborn]]
+    #  [default: [Ljava.lang.String;@7d614b9d]
     S:ownerOfEveryThing <
         minecraft
         thermalfoundation
@@ -211,7 +211,7 @@ resources {
         techreborn
      >
 
-    # add here recipes (names) that you don't want the Crafting Integration to mess with. [default: [minecraft:iron_nugget], [minecraft:iron_block], [minecraft:iron_ingot_from_block], [minecraft:iron_ingot_from_nuggets], [minecraft:gold_nugget], [minecraft:gold_ingot_from_block], [minecraft:gold_ingot_from_nuggets], [minecraft:gold_block]]
+    # add here recipes (names) that you don't want the Crafting Integration to mess with. [default: [Ljava.lang.String;@60c446a0]
     S:recipeToIgnoreList <
         minecraft:iron_nugget
         minecraft:iron_block
@@ -225,7 +225,7 @@ resources {
 
     # add here recipes (names) that you want to be removed.
     # note: this will be executed after Crafting Integration.
-    # note 2: if there is a space on the end of the recipe, then the recipe name must stay in "recipename", this is ONLY required when there is a space on the end " " [default: ]
+    # note 2: if there is a space on the end of the recipe, then the recipe name must stay in "recipename", this is ONLY required when there is a space on the end " " [default: [Ljava.lang.String;@3afb0a27]
     S:recipeToRemoveList <
         unidict:dustconstantan_x2_size.2
         unidict:dustinvar_x3_size.3
@@ -236,7 +236,7 @@ resources {
 
     # resources to be black-listed.
     # this exists to avoid duplicates.
-    # this affect the API. [default: [Aluminium], [Alumina], [Chrome], [Redstone]]
+    # this affect the API. [default: [Ljava.lang.String;@170eda7f]
     S:resourceBlackList <
         Aluminium
         Alumina
