--- a/config/factorytech_maintenance.cfg
+++ b/config/factorytech_maintenance.cfg
@@ -16,7 +16,7 @@ tileentityaerolyzer {
 ##########################################################################################################
 
 tileentityagitator {
-    #  [default: circuit_4:7:0.67:1.15:0.6]
+    #  [default: circuit_4:7:0.67:1.15:0.8]
     S:circuit_4=circuit_4:7:0.67:1.15:0.6
 
     #  [default: mixer:15:0.2:1.2:0.0]
@@ -34,10 +34,10 @@ tileentityautocrafter {
 
 
 tileentityautominer {
-    #  [default: circuit_1:16:0.1:1.0:0.6]
+    #  [default: circuit_1:16:0.1:1.0:0.9]
     S:circuit_1=circuit_1:16:0.1:1.0:0.6
 
-    #  [default: drill:14:0.1:1.0:0.5]
+    #  [default: drill:14:0.1:1.0:0.8]
     S:drill=drill:14:0.1:1.0:0.5
 
     #  [default: motor:16:0.2:1.1:1.0]
@@ -46,22 +46,22 @@ tileentityautominer {
 
 
 tileentitycentrifuge {
-    #  [default: gear:9:0.25:1.1:0.7]
+    #  [default: gear:9:0.25:1.1:0.9]
     S:gear=gear:9:0.25:1.1:0.7
 
     #  [default: motor:7:0.15:1.07:0.9]
     S:motor=motor:7:0.15:1.07:0.9
 
-    #  [default: shaft:16:0.05:1.3:0.75]
+    #  [default: shaft:16:0.05:1.3:0.85]
     S:shaft=shaft:16:0.05:1.3:0.75
 }
 
 
 tileentitycircuitscribe {
-    #  [default: blade:5:0.2:1.05:0.2]
+    #  [default: blade:5:0.2:1.05:0.5]
     S:blade=blade:5:0.2:1.05:0.2
 
-    #  [default: heat_element:12:0.15:1.2:0.55]
+    #  [default: heat_element:12:0.15:1.2:0.75]
     S:heat_element=heat_element:12:0.15:1.2:0.55
 
     #  [default: motor:8:0.1:1.2:0.875]
@@ -73,7 +73,7 @@ tileentitycompressionchamber {
     #  [default: motor:8:0.2:1.05:0.875]
     S:motor=motor:8:0.2:1.05:0.875
 
-    #  [default: piston:8:0.15:1.2:0.66]
+    #  [default: piston:8:0.15:1.2:0.8]
     S:piston=piston:8:0.15:1.2:0.66
 }
 
@@ -94,7 +94,7 @@ tileentitycorecharger {
 
 
 tileentitycrucible {
-    #  [default: heat_element:6:0.1:1.15:0.56]
+    #  [default: heat_element:6:0.1:1.15:0.8]
     S:heat_element=heat_element:6:0.1:1.15:0.56
 
     #  [default: mixer:16:0.15:1.15:0.0]
@@ -103,7 +103,7 @@ tileentitycrucible {
 
 
 tileentitydeepdrill {
-    #  [default: circuit_1:8:0.3:1.3:0.6]
+    #  [default: circuit_1:8:0.3:1.3:0.85]
     S:circuit_1=circuit_1:8:0.3:1.3:0.6
 
     #  [default: core:12:0.4:1.2:0.8]
@@ -157,10 +157,10 @@ tileentityelectroplater {
 
 
 tileentityfluiddrill {
-    #  [default: circuit_2:6:0.1:1.4:0.6]
+    #  [default: circuit_2:6:0.1:1.4:0.8]
     S:circuit_2=circuit_2:6:0.1:1.4:0.6
 
-    #  [default: drill:8:0.2:1.2:0.4]
+    #  [default: drill:8:0.2:1.2:0.7]
     S:drill=drill:8:0.2:1.2:0.4
 
     #  [default: motor:6:0.2:1.1:0.95]
@@ -175,10 +175,10 @@ tileentitygrindstone {
 
 
 tileentityhtfurnace {
-    #  [default: heat_element:10:0.5:1.3:1.0]
+    #  [default: heat_element:15:0.5:1.3:1.0]
     S:heat_element=heat_element:10:0.5:1.3:1.0
 
-    #  [default: wire:5:0.5:1.0:0.7]
+    #  [default: wire:10:0.5:1.0:0.8]
     S:wire=wire:5:0.5:1.0:0.7
 }
 
@@ -187,10 +187,10 @@ tileentityiondisperser {
     #  [default: battery:10:0.15:1.1:0.9]
     S:battery=battery:10:0.15:1.1:0.9
 
-    #  [default: circuit_3:4:0.1:1.1:0.6]
+    #  [default: circuit_3:4:0.1:1.1:0.7]
     S:circuit_3=circuit_3:4:0.1:1.1:0.6
 
-    #  [default: circuit_4:4:0.1:1.1:0.6]
+    #  [default: circuit_4:4:0.1:1.1:0.7]
     S:circuit_4=circuit_4:4:0.1:1.1:0.6
 
     #  [default: core:0:0.05:1.1:0.8]
@@ -220,16 +220,16 @@ tileentitymagnetizer {
 
 
 tileentitymetalcutter {
-    #  [default: blade:8:0.1:1.1:0.5]
+    #  [default: blade:12:0.4:1.1:0.9]
     S:blade=blade:8:0.1:1.1:0.5
 
-    #  [default: gear:6:0.2:1.2:0.7]
+    #  [default: gear:6:0.2:1.2:0.9]
     S:gear=gear:6:0.2:1.2:0.7
 }
 
 
 tileentityoredrill {
-    #  [default: drill:4:0.1:1.2:0.5]
+    #  [default: drill:4:0.1:1.2:0.78]
     S:drill=drill:4:0.1:1.2:0.5
 
     #  [default: motor:8:0.4:1.1:0.85]
@@ -255,6 +255,12 @@ tileentitypotionmixer {
 }
 
 
+tileentityreclaimer {
+    #  [default: wire:16:0.2:1.05:0.0]
+    S:wire=wire:16:0.2:1.05:0.0
+}
+
+
 tileentityrefrigerator {
     #  [default: circuit_3:8:0.2:1.3:0.6]
     S:circuit_3=circuit_3:8:0.2:1.3:0.6
@@ -271,7 +277,7 @@ tileentitysaw {
     #  [default: gear:9:0.1:1.05:0.8]
     S:gear=gear:9:0.1:1.05:0.8
 
-    #  [default: sawblade:10:0.15:1.1:0.7]
+    #  [default: sawblade:10:0.15:1.1:0.8]
     S:sawblade=sawblade:10:0.15:1.1:0.7
 }
 
@@ -286,7 +292,7 @@ tileentityspawner {
     #  [default: battery:0:0.075:1.1:0.8]
     S:battery=battery:0:0.075:1.1:0.8
 
-    #  [default: circuit_1:5:0.15:1.1:0.5]
+    #  [default: circuit_1:8:0.15:1.1:0.5]
     S:circuit_1=circuit_1:5:0.15:1.1:0.5
 
     #  [default: core:6:0.1:1.15:0.8]
@@ -301,7 +307,7 @@ tileentitytemperer {
     #  [default: circuit_3:8:0.2:1.1:0.75]
     S:circuit_3=circuit_3:8:0.2:1.1:0.75
 
-    #  [default: heat_element:10:0.5:1.2:0.55]
+    #  [default: heat_element:10:0.5:1.2:0.6]
     S:heat_element=heat_element:10:0.5:1.2:0.55
 
     #  [default: lens:8:0.5:1.0:0.0]
@@ -313,7 +319,7 @@ tileentityteslacoil {
     #  [default: battery:4:0.3:1.05:0.9]
     S:battery=battery:4:0.3:1.05:0.9
 
-    #  [default: wire:6:0.2:1.1:0.6]
+    #  [default: wire:6:0.2:1.1:0.7]
     S:wire=wire:6:0.2:1.1:0.6
 }
 
@@ -322,7 +328,7 @@ tileentitywoodcutter {
     #  [default: motor:8:0.4:1.15:0.95]
     S:motor=motor:8:0.4:1.15:0.95
 
-    #  [default: sawblade:6:0.1:1.05:0.6]
+    #  [default: sawblade:6:0.1:1.05:0.85]
     S:sawblade=sawblade:6:0.1:1.05:0.6
 }
 
