--- a/config/forestry/common.cfg
+++ b/config/forestry/common.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 1.2.1
+~CONFIG_VERSION: 1.3.0
 
 crafting {
     # Enables the crafting recipe for bronze. [default: true]
@@ -28,10 +28,10 @@ debug {
 
 
 difficulty {
-    # Set to your preferred game mode. Mismatch with the server may cause visual glitches with recipes. [default: EASY] [valid: [OP, EASY, NORMAL, HARD]]
+    # Set to your preferred game mode. Mismatch with the server may cause visual glitches with recipes. [default: EASY] [valid: [EASY, NORMAL, HARD, OP]]
     S:game.mode=EASY
 
-    # Forces recreation of the game mode definitions in config/forestry/gamemodes. [default: true]
+    # Forces recreation of the game mode definitions in config/forestry/gamemodes. [default: false]
     B:recreate.definitions=false
 }
 
@@ -219,13 +219,20 @@ tweaks {
 
     }
 
+    charcoal {
+        # The base amount that the wood pile will drop if the wall blocks are no registered pile waal blocks. [range: 0 ~ 63, default: 8]
+        I:amount.base=8
+
+        # Sets the amount of blocks that the wood pile will check if it is a valid charcoal pile wall block. [range: 1 ~ 32, default: 16]
+        I:check.range=16
+    }
+
 }
 
 
 world {
 
     generate {
-        # This applies to all dimensions. [default: true]
         B:trees=true
 
         # Generates Forestry villagers and their houses. [default: true]
@@ -304,8 +311,6 @@ world {
              >
             I:dimWhitelist <
              >
-
-            # How Frequently forestry generates it's trees in the world [range: 0.0 ~ 10.0, default: 1.0]
             S:treeFrequency=1.0
         }
 
