--- a/config/mystcraft/balance.cfg
+++ b/config/mystcraft/balance.cfg
@@ -208,6 +208,8 @@ baselining {
     I:"minecraft:redstone_ore_0"=600
     I:"mystcraft:blockcrystal_0"=0
     I:"mystcraft:fluidblockblackink_0"=0
+    I:"nuclearcraft:fluid_alugentum_0"=0
+    I:"nuclearcraft:fluid_alumina_0"=0
     I:"nuclearcraft:fluid_americium_241_0"=0
     I:"nuclearcraft:fluid_americium_241_fluoride_0"=0
     I:"nuclearcraft:fluid_americium_241_fluoride_flibe_0"=0
@@ -468,6 +470,8 @@ baselining {
     I:"nuclearcraft:fluid_magnesium_0"=0
     I:"nuclearcraft:fluid_magnesium_nak_0"=0
     I:"nuclearcraft:fluid_magnesium_nak_hot_0"=0
+    I:"nuclearcraft:fluid_manganese_0"=0
+    I:"nuclearcraft:fluid_manganese_dioxide_0"=0
     I:"nuclearcraft:fluid_marshmallow_0"=0
     I:"nuclearcraft:fluid_methanol_0"=0
     I:"nuclearcraft:fluid_milk_chocolate_0"=0
@@ -510,6 +514,7 @@ baselining {
     I:"nuclearcraft:fluid_radaway_0"=0
     I:"nuclearcraft:fluid_redstone_nak_0"=0
     I:"nuclearcraft:fluid_redstone_nak_hot_0"=0
+    I:"nuclearcraft:fluid_sic_vapor_0"=0
     I:"nuclearcraft:fluid_sodium_0"=0
     I:"nuclearcraft:fluid_sodium_fluoride_solution_0"=0
     I:"nuclearcraft:fluid_sodium_hydroxide_solution_0"=0
@@ -642,6 +647,16 @@ fluids {
     S:fluid.alewort.instability.factor_accessibility=
     S:fluid.alewort.instability.factor_flat=
     S:fluid.alewort.seabanned=
+    S:fluid.alugentum.cardrank=
+    S:fluid.alugentum.grammar=
+    S:fluid.alugentum.instability.factor_accessibility=
+    S:fluid.alugentum.instability.factor_flat=
+    S:fluid.alugentum.seabanned=
+    S:fluid.alumina.cardrank=
+    S:fluid.alumina.grammar=
+    S:fluid.alumina.instability.factor_accessibility=
+    S:fluid.alumina.instability.factor_flat=
+    S:fluid.alumina.seabanned=
     S:fluid.americium_241.cardrank=
     S:fluid.americium_241.grammar=
     S:fluid.americium_241.instability.factor_accessibility=
@@ -2770,6 +2785,16 @@ fluids {
     S:fluid.mana.instability.factor_accessibility=
     S:fluid.mana.instability.factor_flat=
     S:fluid.mana.seabanned=
+    S:fluid.manganese.cardrank=
+    S:fluid.manganese.grammar=
+    S:fluid.manganese.instability.factor_accessibility=
+    S:fluid.manganese.instability.factor_flat=
+    S:fluid.manganese.seabanned=
+    S:fluid.manganese_dioxide.cardrank=
+    S:fluid.manganese_dioxide.grammar=
+    S:fluid.manganese_dioxide.instability.factor_accessibility=
+    S:fluid.manganese_dioxide.instability.factor_flat=
+    S:fluid.manganese_dioxide.seabanned=
     S:fluid.marshmallow.cardrank=
     S:fluid.marshmallow.grammar=
     S:fluid.marshmallow.instability.factor_accessibility=
@@ -3147,6 +3172,10 @@ fluids {
     S:fluid.short.mead.instability.factor_accessibility=
     S:fluid.short.mead.instability.factor_flat=
     S:fluid.short.mead.seabanned=
+    S:fluid.sic_vapor.cardrank=
+    S:fluid.sic_vapor.grammar=
+    S:fluid.sic_vapor.instability.factor_accessibility=
+    S:fluid.sic_vapor.instability.factor_flat=
     S:fluid.signalum.cardrank=
     S:fluid.signalum.grammar=
     S:fluid.signalum.instability.factor_accessibility=
