--- a/config/plustic.cfg
+++ b/config/plustic.cfg
@@ -14,8 +14,6 @@ materials {
 
     # Set to false to prevent Bloodwood from being loaded [default: true]
     B:"Enable material bloodwood_plustic"=true
-
-    # Set to false to prevent Certus Quartz from being loaded [default: true]
     B:"Enable material certusquartz_plustic"=true
 
     # Set to false to prevent Darkwood from being loaded [default: true]
@@ -32,8 +30,6 @@ materials {
 
     # Set to false to prevent Flamestring from being loaded [default: true]
     B:"Enable material flamestring_plustic"=true
-
-    # Set to false to prevent Fluix Crystal from being loaded [default: true]
     B:"Enable material fluixcrystal_plustic"=true
 
     # Set to false to prevent Fusewood from being loaded [default: true]
@@ -224,7 +220,19 @@ tweaks {
     # Otherwise: do *not* load the Botania module for PlusTiC, overriding other settings. [default: true]
     B:"Force out Natural Pledge TiC materials"=true
 
-    # Enter in the format "modid:name;meta" (leave meta blank to match any meta) [default: [Ljava.lang.String;@b12085e]
+    # Valid ore dictionary values for Fruit Salad [default: [Ljava.lang.String;@593ab81b]
+    S:"Fruits oredict list" <
+        cropApple
+        listAllfruit
+     >
+
+    # Enter in the format "modid:name;meta" (leave meta blank for zero metadata) [default: [Ljava.lang.String;@79a4a0fb]
+    S:"Fruits stack list" <
+        apple
+        golden_apple;32767
+        melon
+        chorus_fruit
+     >
     S:"Items that Endlectric will not drain from" <
      >
 
@@ -232,7 +240,7 @@ tweaks {
     I:"Modifier values for Botanical" <
      >
 
-    # Objects that the Trash modifier will generate; enter in the format "weight|modid:name;meta" (leave meta blank for zero metadata) [default: [Ljava.lang.String;@5a53baa5]
+    # Objects that the Trash modifier will generate; enter in the format "weight|modid:name;meta" (leave meta blank for zero metadata) [default: [Ljava.lang.String;@1a937ede]
     S:"Trash generation" <
         20|coal
         5|slime_ball
