--- a/config/stevescarts.cfg
+++ b/config/stevescarts.cfg
@@ -92,11 +92,29 @@ enabledmodules {
 }
 
 
+##########################################################################################################
+# events
+#--------------------------------------------------------------------------------------------------------#
+# Whether to let the events happen during their time frames of not
+##########################################################################################################
+
+events {
+    # If the christmas event can occur [default: true]
+    B:"Enable Christmas"=true
+
+    # If the easter event can occur [default: true]
+    B:"Enable Easter"=true
+
+    # If the halloween event can occur [default: true]
+    B:"Enable Halloween"=true
+}
+
+
 repair {
     # Set name of what is needed to repair diamond tier tool, blank uses default text [default: ]
     S:"Diamond Tier Name"=
 
-    # A list of items that can repair an diamond tier tool [default: [ore:gemDiamond]]
+    # A list of items that can repair an diamond tier tool [default: [Ljava.lang.String;@8323c41]
     S:"Diamond Tier Repair Items" <
         ore:gemDiamond
      >
@@ -104,7 +122,7 @@ repair {
     # Set name of what is needed to repair hardened tier tool, blank uses default text [default: ]
     S:"Hardened Tier Name"=
 
-    # A list of items that can repair an hardened tier tool [default: [stevescarts:modulecomponents:22]]
+    # A list of items that can repair an hardened tier tool [default: [Ljava.lang.String;@b7dcb98]
     S:"Hardened Tier Repair Items" <
         stevescarts:modulecomponents:22
      >
@@ -112,7 +130,7 @@ repair {
     # Set name of what is needed to repair iron tier tool, blank uses default text [default: ]
     S:"Iron Tier Name"=
 
-    # A list of items that can repair an iron tier tool [default: [minecraft:iron_ingot]]
+    # A list of items that can repair an iron tier tool [default: [Ljava.lang.String;@60675b25]
     S:"Iron Tier Repair Items" <
         minecraft:iron_ingot
      >
@@ -120,21 +138,21 @@ repair {
 
 
 settings {
-    # Set to true to disable the timer in the cart assember, it will still require fuel
+    # Set to true to disable the timer in the cart assember, it will still require fuel [default: false]
     B:DisableCartAssemberTime=false
 
-    # The max amount of dynamite you can put into a dynamite carrier
+    # The max amount of dynamite you can put into a dynamite carrier [range: 0 ~ 50, default: 50]
     I:MaximumNumberOfDynamites=50
 
     # The max width beside the cart that the drills can mine, the drill diameter will be (width * 2 + 1)
     # Min: 1
-    # Max: 4
+    # Max: 4 [range: 1 ~ 4, default: 4]
     I:maxDrillWidth=4
 
-    # If the sounds in the arcade should be enabled
+    # If the sounds in the arcade should be enabled [default: true]
     B:useArcadeSounds=true
 
-    # If mob sounds should be used in the tetris arcade game
+    # If mob sounds should be used in the tetris arcade game [default: true]
     B:useTetrisMobSounds=true
 }
 
