--- a/config/torchmaster.cfg
+++ b/config/torchmaster.cfg
@@ -9,17 +9,20 @@ general {
     # Max: 512
     I:DreadLampRange=64
 
+    # The maximum amount of invisble lights a feral flare lantern can place. Set to 0 to disable light placement.
+    # Warning: Setting this value too high in conjunction with the feralFlareMinLightLevel and Radius can lead to world corruption!
+    # (Badly compressed packet error)
+    # Min: 0
+    # Max: 2147483647
+    I:FeralFlareLanternLightCountHardcap=255
+
     # If this setting is enabled, the mega torch will block all natural spawn attempts from Lycanites Mobs in its radius
     B:LycanitesMobsBlockAll=true
 
     # Allows to get the lit torch when harvested with silk touch. Has no effect if MegaTorchExtinguishOnHarvest is false)
-    # Min: 0
-    # Max: 512
     B:MegaTorchAllowSilkTouch=true
 
     # Controls if the mega torch should allow mob spawning from vanilla spawners
-    # Min: 0
-    # Max: 512
     B:MegaTorchAllowVanillaSpawners=true
 
     # The speed at which the torch will extinguish. Set to 0 to disable.
@@ -68,6 +71,18 @@ general {
         integrateddynamics:menril_torch_stone
         jetorches:torch
      >
+
+    # Controls the amount of blocks between each segment in the visualizer
+    # You can increase this value in case you prefer less lines in the volume visualization
+    # or if the visualization causes a big FPS hit to your potato.
+    # Do not increase this value above the torch range or you might break the rendering.
+    # Higher values will render less lines. 1.0 = 1 block per segment, 2.0 = 2 blocks per segment
+    # Min: 0.5
+    # Max: 1.7976931348623157E308
+    D:TorchVisualizerSegmentationFactor=2.0
+
+    # If false, lights decay slowly after the lantern has been removed. If true, the lights will be removed instantly
+    B:feralFlareLightDecayInstantly=false
 
     # The target minimum light level to place lights for
     # Min: 1
