Disabled nature core

--- a/config/randomthings.cfg
+++ b/config/randomthings.cfg
@@ -82,7 +82,7 @@ worldgen {
     B:LavaCharm=true
     B:Lotus=true
     B:MagicHood=true
-    B:Nature-Core=true
+    B:Nature-Core=false
     B:NumberedSpectreCoils=false
     B:PeaceCandle=true
     B:PitcherPlants=false
