Disabled Quark fairy rings

--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -1330,7 +1330,7 @@ world {
     B:"Crystal caves"=true
     B:"Default world options"=true
     B:"Depth mobs"=true
-    B:"Fairy rings"=true
+    B:"Fairy rings"=false
     B:"Generate clay underground like dirt"=false
     B:"Guardians spawn in oceans"=true
     B:"Nether fossils"=true
