Disabled obsidian, silver, and copper furnaces

--- a/config/InvTweaks/InvTweaks.cfg
+++ b/config/InvTweaks/InvTweaks.cfg
@@ -1,7 +1,7 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Fri Jan 11 04:58:44 CST 2019
-enableMiddleClick=true
+#Fri Jan 11 07:01:10 CST 2019
+enableMiddleClick=false
 showChestButtons=true
 enableSortingOnPickup=false
 enableAutoRefill=true
