--- a/config/morefurnaces.cfg
+++ b/config/morefurnaces.cfg
@@ -1,7 +1,8 @@
 # Configuration file
 
 general {
-
+    D:copperFurnaceConsumptionRate=1.25
+    I:copperFurnaceSpeed=150
     D:diamondFurnaceConsumptionRate=8.0
     I:diamondFurnaceSpeed=40
     D:goldFurnaceConsumptionRate=4.0
@@ -10,7 +11,10 @@ general {
     I:ironFurnaceSpeed=150
     D:netherrackFurnaceConsumptionRate=1.0
     I:netherrackFurnaceSpeed=1800
-
+    D:obsidianFurnaceConsumptionRate=2.0
+    I:obsidianFurnaceSpeed=150
+    D:silverFurnaceConsumptionRate=1.75
+    I:silverFurnaceSpeed=100
 }
 
 
