--- a/config/railcraft/items.cfg
+++ b/config/railcraft/items.cfg
@@ -46,9 +46,9 @@ items {
     B:fuel_coke=false
     B:gear=true
     B:ic2_upgrade_lapotron=true
-    B:ingot=false
-    B:nugget=false
-    B:plate=false
+    B:ingot=true
+    B:nugget=true
+    B:plate=true
     B:rail=true
     B:railbed=true
     B:rebar=true
