--- a/config/unidict/UniDict.cfg
+++ b/config/unidict/UniDict.cfg
@@ -22,7 +22,7 @@ dump {
 
 general {
     # auto hide items in JEI? [default: true]
-    B:autoHideInJEI=true
+    B:autoHideInJEI=false
 
     # put here entries that you don't want to hide in JEI.
     # only works if keepOneEntry is false. [default: [Ljava.lang.String;@af11620]
@@ -55,6 +55,11 @@ general {
     # kinds listed here will be blacklisted in keepOneEntry.
     # must be the exact kind name. [default: [Ljava.lang.String;@49678906]
     S:keepOneEntryKindBlackList <
+	plateBrass
+	blockBrass
+	gearBrass
+	nuggetBrass
+	ingotBrass
      >
 
     # mods listed here will be blacklisted in keepOneEntry.
@@ -191,7 +196,6 @@ resources {
         Osmium
         Bronze
         Steel
-        Brass
         Invar
         Electrum
         Cupronickel
