Oil now spawns in cold, desert and wasteland biomes

--- a/config/buildcraft/main.cfg
+++ b/config/buildcraft/main.cfg
@@ -110,9 +110,7 @@ worldgen {
             buildcraftenergy:oil_ocean
          >
         S:excludedBiomes <
-            minecraft:ocean
             minecraft:plains
-            minecraft:desert
             minecraft:extreme_hills
             minecraft:forest
             minecraft:taiga
@@ -120,14 +118,10 @@ worldgen {
             minecraft:river
             minecraft:hell
             minecraft:sky
-            minecraft:frozen_ocean
-            minecraft:frozen_river
-            minecraft:ice_flats
             minecraft:ice_mountains
             minecraft:mushroom_island
             minecraft:mushroom_island_shore
             minecraft:beaches
-            minecraft:desert_hills
             minecraft:forest_hills
             minecraft:taiga_hills
             minecraft:smaller_extreme_hills
@@ -140,8 +134,6 @@ worldgen {
             minecraft:birch_forest
             minecraft:birch_forest_hills
             minecraft:roofed_forest
-            minecraft:taiga_cold
-            minecraft:taiga_cold_hills
             minecraft:redwood_taiga
             minecraft:redwood_taiga_hills
             minecraft:extreme_hills_with_trees
@@ -151,16 +143,31 @@ worldgen {
             minecraft:mesa_rock
             minecraft:mesa_clear_rock
             randomthings:spectral
-            appliedenergistics2:storage_biome
             integrateddynamics:biome_meneglin
-            nuclearcraft:nuclear_wasteland
-            rockhounding_surface:white_sands
+            minecraft:void
+            minecraft:mutated_extreme_hills
+            minecraft:mutated_forest
+            minecraft:mutated_taiga
+            minecraft:mutated_swampland
+            minecraft:mutated_ice_flats
+            minecraft:mutated_jungle
+            minecraft:mutated_jungle_edge
+            minecraft:mutated_birch_forest
+            minecraft:mutated_birch_forest_hills
+            minecraft:mutated_roofed_forest
+            minecraft:mutated_redwood_taiga
+            minecraft:mutated_redwood_taiga_hills
+            minecraft:mutated_extreme_hills_with_trees
+            minecraft:mutated_savanna
+            minecraft:mutated_savanna_rock
+            minecraft:mutated_mesa
+            minecraft:mutated_mesa_rock
+            minecraft:mutated_mesa_clear_rock
             traverse:autumnal_woods
             traverse:woodlands
             traverse:mini_jungle
             traverse:meadow
             traverse:green_swamp
-            traverse:red_desert
             traverse:temperate_rainforest
             traverse:badlands
             traverse:mountainous_desert
@@ -173,34 +180,12 @@ worldgen {
             traverse:glacier_spikes
             traverse:snowy_coniferous_forest
             traverse:lush_hills
-            traverse:canyon
             traverse:crag_cliffs
             traverse:desert_shrubland
             traverse:thicket
             traverse:arid_highland
-            minecraft:void
-            minecraft:mutated_plains
-            minecraft:mutated_desert
-            minecraft:mutated_extreme_hills
-            minecraft:mutated_forest
-            minecraft:mutated_taiga
-            minecraft:mutated_swampland
-            minecraft:mutated_ice_flats
-            minecraft:mutated_jungle
-            minecraft:mutated_jungle_edge
-            minecraft:mutated_birch_forest
-            minecraft:mutated_birch_forest_hills
-            minecraft:mutated_roofed_forest
-            minecraft:mutated_taiga_cold
-            minecraft:mutated_redwood_taiga
-            minecraft:mutated_redwood_taiga_hills
-            minecraft:mutated_extreme_hills_with_trees
-            minecraft:mutated_savanna
-            minecraft:mutated_savanna_rock
-            minecraft:mutated_mesa
-            minecraft:mutated_mesa_rock
-            minecraft:mutated_mesa_clear_rock
-            aether_legacy:aether_highlands
+            thaumcraft:magical_forest
+            thaumcraft:eerie
          >
         I:excludedDimensions <
             -1
