--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -130,6 +130,7 @@ crafting {
     B:buildcraft.core.block.BlockDecoration=true
     B:ca.zenotek.sentek.blocks.BlockCore=true
     B:ca.zenotek.sentek.blocks.BlockNode=true
+    B:cassiokf.industrialrenewal.blocks.BlockBase=true
     B:charcoalPit.blocks.BlockBronzeReinforcedBrick=true
     B:charcoalPit.blocks.BlockCoke=true
     B:charcoalPit.blocks.BlockLogPile=true
@@ -279,6 +280,7 @@ crafting {
     B:li.cil.oc.common.block.ChameliumBlock=true
     B:li.cil.oc.common.block.FakeEndstone=true
     B:lightningstudios.solarcycler.block.BlockBase=true
+    B:logisticspipes.blocks.LogisticsSolidBlock=true
     B:lumien.randomthings.block.BlockBiomeStone=true
     B:lumien.randomthings.block.BlockBlockLuminous=true
     B:lumien.randomthings.block.BlockContactLever=true
