--- a/config/lostcities/general.cfg
+++ b/config/lostcities/general.cfg
@@ -7,15 +7,15 @@
 ##########################################################################################################
 
 general {
-    # List of other worldtypes (id) that this mod will try to work with. The worldtype has to support the IChunkPrimerFactory API for this to work [default: [Ljava.lang.String;@726179b8]
+    # List of other worldtypes (id) that this mod will try to work with. The worldtype has to support the IChunkPrimerFactory API for this to work [default: [Ljava.lang.String;@5a2329e8]
     S:adaptingWorldTypes <
      >
 
-    # List of additional Lost City dimensions. Format '<id>:<profile>' [default: [Ljava.lang.String;@1998fe4d]
+    # List of additional Lost City dimensions. Format '<id>:<profile>' [default: [Ljava.lang.String;@4a97f84e]
     S:additionalDimensions <
      >
 
-    # List of asset libraries loaded in the specified order. If the path starts with '/' it is going to be loaded directly from the classpath. If the path starts with '$' it is loaded from the config directory [default: [Ljava.lang.String;@33cb1b32]
+    # List of asset libraries loaded in the specified order. If the path starts with '/' it is going to be loaded directly from the classpath. If the path starts with '$' it is loaded from the config directory [default: [Ljava.lang.String;@34548e0c]
     S:assets <
         /assets/lostcities/citydata/conditions.json
         /assets/lostcities/citydata/palette.json
@@ -30,7 +30,7 @@ general {
         $lostcities/userassets.json
      >
 
-    # List of blocks for which a lighting update is needed [default: [Ljava.lang.String;@3d02b2c1]
+    # List of blocks for which a lighting update is needed [default: [Ljava.lang.String;@1f061119]
     S:blocksRequiringLightingUpdates <
         minecraft:glowstone
         minecraft:lit_pumpkin
@@ -52,13 +52,13 @@ general {
     # The 'profile' to use for generation of the Lost City dimension [default: default]
     S:dimensionProfile=default
 
-    # List of privatep profiles that cannot be selected by the player but are only used as a child profile of another one [default: [Ljava.lang.String;@18098e40]
+    # List of privatep profiles that cannot be selected by the player but are only used as a child profile of another one [default: [Ljava.lang.String;@16ff5c3d]
     S:privateProfiles <
         bio_wasteland
         water_empty
      >
 
-    # List of all supported profiles (used for world creation). Warning! Make sure there is always a 'default' profile! [default: [Ljava.lang.String;@46489c23]
+    # List of all supported profiles (used for world creation). Warning! Make sure there is always a 'default' profile! [default: [Ljava.lang.String;@defa81]
     S:profiles <
         default
         cavern
